# multi_poetry

./: README.md
.prepare_pywsdk/: pyproject.toml
autoboss/: pyproject.toml
autoboss/autoboss/: main.py
pywsdk/: pyproject.toml
pywsdk/pywsdk/: main.py
toolbox/: pyproject.toml
toolbox/toolbox/package_a/: main.py
toolbox/toolbox/package_b/: main.py
