[tool.poetry]
name = "pywsdk"
version = "0.1.0"
description = ""
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"
packages = [
    {include = "../toolbox"},
]

[tool.poetry.dependencies]
python = "^3.10"
toolbox = { path = "../toolbox/", develop = false }
cowsay = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
pywsdk-test = 'pywsdk.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
