[tool.poetry]
name = "autoboss"
version = "0.1.0"
description = "A top level package called autoboss"
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toolbox = { path = "../toolbox/", develop = true }
cowsay = "^5.0"

[tool.poetry.scripts]
autoboss-test = 'autoboss.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
