[tool.poetry]
name = "autoboss"
version = "0.2.0"
description = "A top level package called autoboss"
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"
packages = [
    { include = "toolbox", from = "../toolbox" },
    { include = "autoboss", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^5.0"

[tool.poetry.scripts]
autoboss-test = 'autoboss.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
