[tool.poetry]
name = "pywsdk"
version = "0.5.0"
description = ""
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"
packages = [
    { include = "toolbox/package_a", from = "../toolbox" },
    { include = "toolbox/package_b", from = "../toolbox" },
    { include = "pywsdk", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
pywsdk-test = 'pywsdk.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
