[tool.poetry]
name = "pywsdk"
version = "0.5.1"
description = "A top level package called pywsdk"
authors = ["Tim Camise <tcamise@gopro.com>"]
readme = "README.md"
packages = [
    { include = "toolbox", from = "../toolbox" },
    { include = "pywsdk", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
pywsdk-test = 'pywsdk.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
